@@ -1,3 +1,5 @@
+* Ensure Selector.handlers.id finds the proper element even when it's not attached to the document. [#198, #271 state:resolved] [jddalton]
+
 * Ensure Element#getDimensions only unhides elements that are hidden. [Andrew Dupont, Nick Stackenburg, jddalton]
 
 * Make Element#getDimensions use offset(Height|Width) rather than client(Height|Width). Closes #10122. [demian85, jddalton, Nick Stackenburg]
